# BoXHED2.0

./: .gitmodules  README.md  boxhed.py  boxhed_main.py  conda_install_packages.sh  condapackagelist.txt  config.txt  demo.ipynb  grid_search.py  iboxhed_utils.py  main.py  model_selection.py  packageslist.txt  preprocess.cpp  preprocessor.py  setup.sh  setup_boxhed.py  setup_preprocess.py  synth_gen.py  tutorial.ipynb  utils.py
boxhed.kernel/src/common/: .hist_util.cu.swo  .quantile.cu.swo
boxhed.kernel/src/data/: .ellpack_page.cu.swp
boxhed.kernel/src/objective/: regression_obj.cu
boxhed.kernel/src/tree/: param.h
include/: preprocess.h
preprocessor_installer/: CMakeLists.txt
preprocessor_installer/src/: preprocessor.cpp  preprocessor.h
preprocessor_installer/src/boxhed_preprocessor.egg-info/: PKG-INFO  SOURCES.txt
synth_files/: test_random_pick_exp41_numIrr_40.csv  test_random_pick_exp42_numIrr_40.csv  test_random_pick_exp43_numIrr_40.csv  test_random_pick_exp44_numIrr_40.csv  train_delta_exp41_numIrr_40.csv  train_delta_exp42_numIrr_40.csv  train_delta_exp43_numIrr_40.csv  train_delta_exp44_numIrr_40.csv
